--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duck Angels</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
@@ -15,10 +16,10 @@
         </nav>
     </header>
     <main>
+        <h2>Personal Info</h2>
         <section class="personalInfo">
-            <h1>Personal Info</h1>
             <article>
-                <h2>Name</h2>
+                <h3>Name</h3>
                 <ul>
                     <li>Day of birth</li>
                     <li>City</li>
@@ -27,7 +28,7 @@
                 <img src="" alt="Profile picture">
             </article>
             <article>
-                <h2>Name</h2>
+                <h3>Name</h3>
                 <ul>
                     <li>Day of birth</li>
                     <li>City</li>
@@ -36,7 +37,7 @@
                 <img src="" alt="Profile picture">
             </article>
             <article>
-                <h2>Name</h2>
+                <h3>Name</h3>
                 <ul>
                     <li>Day of birth</li>
                     <li>City</li>
@@ -45,7 +46,7 @@
                 <img src="" alt="Profile picture">
             </article>
             <article>
-                <h2>Name</h2>
+                <h3>Name</h3>
                 <ul>
                     <li>Day of birth</li>
                     <li>City</li>
