--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
     <header>
         <nav>
-            <h1>Duck Angels</h1>
+            <h1 class="visually-hidden">Duck Angels</h1>
+            <img src="img/logo.svg" alt="Duck Angles logo">    
             <a href="">Music</a>
         </nav>
     </header>
