--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <header>
         <nav>
             <h1 class="visually-hidden">Duck Angels</h1>
-            <img src="img/logo.svg" alt="Duck Angles logo">    
-            <a href="">Music</a>
+            <img src="img/logo.svg" alt="Duck Angles logo">       
         </nav>
+        <a href="#musiclist">Visit our music list</a>
     </header>
     <main>
-        <h2>Personal Info</h2>
+        <h2 class="visually-hidden">Personal Info</h2>
         <section class="personalInfo">
             <article>
                 <h3>Name</h3>
@@ -36,7 +36,7 @@
                     <li>Favorite music genre</li>
                 </ul>
                 <img src="" alt="Profile picture">
-                
+
             </article>
             <article>
                 <h3>Name</h3>
@@ -57,7 +57,7 @@
                 <img src="" alt="Profile picture">
             </article>
         </section>
-        <section class="songs">
+        <section id="musiclist" class="songs">
             <h1>Songs</h1>
             <button></button><button></button>
             <article>
