--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
             <h1 class="visually-hidden">Duck Angels</h1>
             <img src="img/logo.svg" alt="Duck Angles logo">       
         </nav>
-        <a href="#musiclist">Visit our music list</a>
+        <a href="#songs">Visit our music list</a>
     </header>
+
+    <section class="loading-container" id="loadingContainer">
+        <div class="loader"></div>
+    </section>
+
     <main>
         <h2 class="visually-hidden">Personal Info</h2>
         <section class="personalInfo">
@@ -57,7 +62,7 @@
                 <img src="" alt="Profile picture">
             </article>
         </section>
-        <section id="musiclist" class="songs">
+        <section id="songs" class="songs">
             <h1>Songs</h1>
             <button></button><button></button>
             <article>
@@ -77,6 +82,8 @@
     <footer>
 
     </footer>
+
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
