--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Duck Angels</title>
+    <link rel="stylesheet" href="/styles/style.css">
 </head>
 
 <body>
@@ -56,18 +57,74 @@
         </section>
         <section class="songs">
             <h1>Songs</h1>
-            <button></button><button></button>
+            <button>
+                <p>Sort</p>
+            </button><button>
+                <p>Filter</p>
+            </button>
             <article>
-                <h2>Song Name</h2>
+                <h2>My Way</h2>
                 <ul>
-                    <li>artist</li>
-                    <li>Album</li>
-                    <li>Year</li>
-                    <li>Genre</li>
-                    <li>Length</li>
+                    <li>Artist: Ariana Grande</li>
+                    <li>Album: My Everything - 2013</li>
                 </ul>
-                <img src="" alt="Profile Picture">
-                <img src="" alt="Album Cover">
+                <h3>POP</h3>
+                <div>
+
+                    <img src="/media/MyEverythingCover.png" alt="Album Cover">
+                    <div>
+                        <div></div>
+                    </div>
+                    <img src="media/MyEverythingCover.png" alt="Profile Picture">
+                </div>
+            </article>
+            <article>
+                <h2>My Way</h2>
+                <ul>
+                    <li>Artist: Ariana Grande</li>
+                    <li>Album: My Everything - 2013</li>
+                </ul>
+                <h3>POP</h3>
+                <div>
+
+                    <img src="/media/MyEverythingCover.png" alt="Album Cover">
+                    <div>
+                        <div></div>
+                    </div>
+                    <img src="media/MyEverythingCover.png" alt="Profile Picture">
+                </div>
+            </article>
+            <article>
+                <h2>My Way</h2>
+                <ul>
+                    <li>Artist: Ariana Grande</li>
+                    <li>Album: My Everything - 2013</li>
+                </ul>
+                <h3>POP</h3>
+                <div>
+
+                    <img src="/media/MyEverythingCover.png" alt="Album Cover">
+                    <div>
+                        <div></div>
+                    </div>
+                    <img src="media/MyEverythingCover.png" alt="Profile Picture">
+                </div>
+            </article>
+            <article>
+                <h2>My Way</h2>
+                <ul>
+                    <li>Artist: Ariana Grande</li>
+                    <li>Album: My Everything - 2013</li>
+                </ul>
+                <h3>POP</h3>
+                <div>
+
+                    <img src="/media/MyEverythingCover.png" alt="Album Cover">
+                    <div>
+                        <div></div>
+                    </div>
+                    <img src="media/MyEverythingCover.png" alt="Profile Picture">
+                </div>
             </article>
         </section>
     </main>
