--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <h1 class="visually-hidden">Duck Angels</h1>
-            <img src="img/logo.svg" alt="Duck Angles logo">       
+            <img src="/public/img/logo.svg" alt="Duck Angles logo">
         </nav>
         <a href="#songs">Visit our music list</a>
     </header>
