muziek data fetchen

--- a/index.html
+++ b/index.html
@@ -26,115 +26,17 @@
         <h2 class="visually-hidden">Personal Info</h2>
         <a href="#songs">Visit our music list</a>
         <section class="personalInfo">
-            <article>
-                <h3>Name</h3>
-                <ul>
-                    <li>Day of birth</li>
-                    <li>City</li>
-                    <li>Favorite music genre</li>
-                </ul>
-                <img src="" alt="Profile picture">
-            </article>
-            <article>
-                <h3>Name</h3>
-                <ul>
-                    <li>Day of birth</li>
-                    <li>City</li>
-                    <li>Favorite music genre</li>
-                </ul>
-                <img src="" alt="Profile picture">
-
-            </article>
-            <article>
-                <h3>Name</h3>
-                <ul>
-                    <li>Day of birth</li>
-                    <li>City</li>
-                    <li>Favorite music genre</li>
-                </ul>
-                <img src="" alt="Profile picture">
-            </article>
-            <article>
-                <h3>Name</h3>
-                <ul>
-                    <li>Day of birth</li>
-                    <li>City</li>
-                    <li>Favorite music genre</li>
-                </ul>
-                <img src="" alt="Profile picture">
-            </article>
+            <!-- Data wordt gefetcht -->
         </section>
-        <section id="songs" class="songs">
+        <section class="songs">
             <h1>Songs</h1>
             <button>
                 <p>Sort</p>
             </button><button>
                 <p>Filter</p>
             </button>
-            <article>
-                <h2>My Way</h2>
-                <ul>
-                    <li>Artist: Ariana Grande</li>
-                    <li>Album: My Everything - 2013</li>
-                </ul>
-                <h3>POP</h3>
-                <div>
-
-                    <img src="/media/MyEverythingCover.png" alt="Album Cover">
-                    <div>
-                        <div></div>
-                    </div>
-                    <img src="media/MyEverythingCover.png" alt="Profile Picture">
-                </div>
-            </article>
-            <article>
-                <h2>My Way</h2>
-                <ul>
-                    <li>Artist: Ariana Grande</li>
-                    <li>Album: My Everything - 2013</li>
-                </ul>
-                <h3>POP</h3>
-                <div>
-
-                    <img src="/media/MyEverythingCover.png" alt="Album Cover">
-                    <div>
-                        <div></div>
-                    </div>
-                    <img src="media/MyEverythingCover.png" alt="Profile Picture">
-                </div>
-            </article>
-            <article>
-                <h2>My Way</h2>
-                <ul>
-                    <li>Artist: Ariana Grande</li>
-                    <li>Album: My Everything - 2013</li>
-                </ul>
-                <h3>POP</h3>
-                <div>
-
-                    <img src="/media/MyEverythingCover.png" alt="Album Cover">
-                    <div>
-                        <div></div>
-                    </div>
-                    <img src="media/MyEverythingCover.png" alt="Profile Picture">
-                </div>
-            </article>
-            <article>
-                <h2>My Way</h2>
-                <ul>
-                    <li>Artist: Ariana Grande</li>
-                    <li>Album: My Everything - 2013</li>
-                </ul>
-                <h3>POP</h3>
-                <div>
-
-                    <img src="/media/MyEverythingCover.png" alt="Album Cover">
-                    <div>
-                        <div></div>
-                    </div>
-                    <img src="media/MyEverythingCover.png" alt="Profile Picture">
-                </div>
-            </article>
+            
+            <!-- Data wordt gefetcht -->
         </section>
     </main>
     <footer>
